# repos-gui

./: .gitignore  AGENTS.md  BUILD.md  CloneX.spec  GIST-CONFIG-GUIDE.md  GitHub 仓库分类 Prompt.md  README.md  REPO-GROUPS.md  ai_classify_system_prompt.txt  clone-all-repos-universal.sh  gh-repos-gui.spec  gh_repos_list.txt  gui.py  main.py  main.sh  pyproject.toml  requirements.txt  setup.py  sync-groups-v2.sh  开发日志.md  高地编号参考.md
.cursor/rules/: agent-workflow.mdc  cursor-rules-format.mdc  file-header-comments.mdc  script-global-check.mdc  single-responsibility-principle.mdc  workflow-maintenance.mdc
.github/workflows/: build.yml  pypi-publish.yml  sync-agent-rules.yml
.windsurf/rules/: clonex-release-gate.mdc
.windsurf/workflows/: handoff.md  review.md
agent-task-log/archive/2026-02/: 2026-02-08-1_【chore】repos-gui收尾-任务日志.md
app/: constants.py  dialogs.py  main_window.py  workers.py
docs/: AGENT-RULES-ARCHITECTURE.md  ARCHITECTURE.md  BUILD.md  GIST-CONFIG-GUIDE.md  MCP-GUIDE.md  REPO-GROUPS.md.example  mcp_config_dev.json  mcp_config_example.json
docs/agent-rules/: agent-workflow.md  handoff.md  release-gate.md  review.md
handoff/: current-task.md  cursor-prompt.md  review-feedback.md  state.json
lib/: __init__.py  ai.py  args.py  cache.sh  check.py  cleanup.sh  clone.py  clone.sh  config.py  config.sh  diff-analysis.sh  failed_repos.py  github-api-query.sh  github.sh  github_api.py  logger.py  logger.sh  main_helpers.sh  parallel.py  parser.sh  paths.py  progress.sh  repo-clone-update.sh  repo_groups.py  stats.sh  sync-orchestration.sh  sync.py  sync.sh  utils.sh
ongoing/: task-sync-gui.md
prompts/: cursor-task-template.md
scripts/: README.md  generate_task_log.py  handoff_state.py  inspect_ui.py  mcp_smoke.py  monitor_github.py  rebuild-run.ps1  relay_to_cursor.py  sync-agent-rules.py  watch-rebuild-run.ps1  watch_handoff.py
src/clonex/: __init__.py  cli.py
src/clonex/application/: __init__.py  execution.py  local_generation.py  repo_sync.py
src/clonex/core/: check.py  clone.py  failed_repos.py  parallel.py  pull.py  repo_config.py  workspace.py
src/clonex/domain/: __init__.py  models.py  repo_groups.py
src/clonex/infra/: __init__.py  auth.py  auto_gist_sync.py  gist_config.py  github_api.py  logger.py
src/clonex/mcp/: __init__.py  __main__.py  app.py  context.py  errors.py  server.py
src/clonex/mcp/tools/: __init__.py  batch.py  execution.py  flows.py  groups.py  queries.py
src/clonex/ui/: advanced_settings_dialog.py  chrome.py  gist_manager_dialog.py  main_window.py  theme.py  workers.py
src/gh_repos_sync/: __init__.py  cli.py
src/gh_repos_sync/application/: __init__.py  ai_generation.py  execution.py  sync_with_remote.py
src/gh_repos_sync/core/: check.py  clone.py  parallel.py  process_control.py  pull.py  repo_config.py
src/gh_repos_sync/domain/: repo_groups.py
src/gh_repos_sync/infra/: ai.py  auth.py  gist_config.py  github_api.py  paths.py
src/gh_repos_sync/ui/: auto_sync_dialog.py  chrome.py  dialogs.py  gist_manager_dialog.py  main_window.py  theme.py  workers.py
tests/: conftest.py  test_cli_paths.py  test_clone_errors.py  test_execution_pull_result_shape.py  test_gist_discover.py  test_parallel_progress.py  test_pull_reason_classification.py  test_repo_group_paths.py  test_sync_with_remote.py  test_workspace.py
tests/mcp/: conftest.py  test_batch.py  test_execution.py  test_flows.py  test_groups.py  test_queries.py
