[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clonex"
version = "1.0.0"
description = "CloneX: GitHub 仓库批量分类克隆与管理工具"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "qiao-925" }]
license = { text = "MIT" }
keywords = ["github", "clone", "gui", "pyqt"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Version Control :: Git",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "PyQt6>=6.6.0",
  "PyQt6-WebEngine>=6.6.0",
  "pygithub>=2.2.0",
  "requests>=2.31.0",
  "chardet>=5.0.0",
  "qt-material>=2.14",
  "keyring>=25.0",
  "colorama>=0.4.6; platform_system == 'Windows'",
  "dogtail>=1.0.8",
  "pygobject>=3.48.2",
]

[project.urls]
Homepage = "https://github.com/qiao-925/repos-gui"

[project.scripts]
clonex = "gh_repos_sync.ui.main_window:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
build = [
  "pyinstaller>=6.0",
]

[tool.uv]
default-groups = []
