[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clonex"
version = "1.0.1"
description = "CloneX: GitHub multi-repo maintenance tool with CLI, GUI, and MCP entrypoints"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "qiao-925" }]
license = "MIT"
keywords = ["github", "clone", "cli", "gui", "pyqt", "mcp", "model-context-protocol", "agent"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Version Control :: Git",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "pygithub>=2.2.0",
  "requests>=2.31.0",
  "chardet>=5.0.0",
  "keyring>=25.0",
  "colorama>=0.4.6; platform_system == 'Windows'",
]

[project.urls]
Homepage = "https://github.com/qiao-925/CloneX"

[project.scripts]
clonex = "gh_repos_sync.cli:main"
clonex-gui = "gh_repos_sync.ui.main_window:main"
clonex-mcp = "gh_repos_sync.mcp.server:main"

[project.optional-dependencies]
cli = []
gui = [
  "PyQt6>=6.6.0",
  "PyQt6-WebEngine>=6.6.0",
  "qt-material>=2.14",
]
mcp = [
  "mcp>=1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
build = [
  "pyinstaller>=6.0",
]
inspect = [
  "pygobject>=3.48.2",
  "dogtail>=1.0.8",
]
test = [
  "pytest>=8.0",
  "anyio>=4.0",
  "mcp>=1.0",
]

[tool.uv]
default-groups = []

[tool.pytest.ini_options]
testpaths = ["tests"]
# Keep tmp_path inside the workspace — %LOCALAPPDATA%\Temp is blocked by
# Controlled Folder Access on this machine and pytest can't scandir it.
addopts = "-ra --strict-markers --basetemp=.pytest-tmp"
markers = [
  "anyio: mark test as an anyio-based async test",
]
